# A5-PTIN

./: .gitignore  README.md
API_ROUTING/: README.md  api_routing.py  main.py  path.json  pathfinding.py
Autodiagnòstic cotxe/: README.md  checkup.py  dades_sintetiques.csv  generar_coche.py
Detecció de persones/: README.md
Detecció de persones/ImageRecognition/: ImageRecognition.py  readme.txt  recimage.py
Detecció de persones/VideoRecognition/: CameraDetection.py  VideoRecognition.py  deteccion_objetos.py  deteccions.json  readme.txt  recvideo.py
Model predictiu/: README.md  api.py  coords.tar.xz  mapa_coord.py  mean.py  newModel.py  newPredictiveModel.py  newTest.py  newTestModel.py  newTrain.py  position_model.pkl  predictiveModel.py  researchTrain.py  test.json  testA.json  testModel.py  trainModel.py
Model predictiu/K-Fold_Cross-Validation/: trainModel.py
Model predictiu/pointsJoel/: scan_20250623_115601.json  scan_20250623_115709.json  scan_20250623_115745.json  scan_20250623_115954.json  scan_20250623_120011.json  scan_20250623_120026.json  scan_20250623_120327.json  scan_20250623_120428.json  scan_20250623_120526.json  scan_20250623_120544.json  scan_20250623_120554.json  scan_20250623_120635.json  scan_20250623_120638.json  scan_20250623_120851.json  scan_20250623_120900.json  scan_20250623_121009.json  scan_20250623_121045.json  scan_20250623_121054.json  scan_20250623_121155.json  scan_20250623_121341.json  scan_20250623_121352.json  scan_20250623_121417.json  scan_20250623_121456.json  scan_20250623_121606.json  scan_20250623_121642.json  scan_20250623_121706.json  scan_20250623_121726.json  scan_20250625_104947.json  scan_20250625_105704.json  scan_20250625_105728.json  scan_20250625_105735.json  scan_20250625_105739.json  scan_20250625_105757.json  scan_20250625_105801.json  scan_20250625_105809.json  scan_20250625_105814.json  scan_20250625_105817.json  scan_20250625_105821.json  scan_20250625_105829.json  scan_20250625_105833.json  (+168 more)
Model predictiu/pointsLatest/: scan_20250625_125357 (3).json  scan_20250625_125357.json  scan_20250625_125359.json  scan_20250625_125401.json  scan_20250625_125404 (2).json  scan_20250625_125407 (2).json  scan_20250625_125407.json  scan_20250625_125410.json  scan_20250625_125411.json  scan_20250625_125412.json  scan_20250625_125414.json  scan_20250625_125416.json  scan_20250625_125417.json  scan_20250625_125418.json  scan_20250625_125419.json  scan_20250625_125420 (2).json  scan_20250625_125420.json  scan_20250625_125423.json  scan_20250625_125425.json  scan_20250625_125426.json  scan_20250625_125427 (2).json  scan_20250625_125427.json  scan_20250625_125429.json  scan_20250625_125431 (2).json  scan_20250625_125431.json  scan_20250625_125436 (2).json  scan_20250625_125436.json  scan_20250625_125441 (2).json  scan_20250625_125441 (3).json  scan_20250625_125441.json  scan_20250625_125444.json  scan_20250625_125448 (2).json  scan_20250625_125451.json  (+1803 more)
agente12/: README.md  pyproject.toml
agente12/knowledge/: areas_comerciales.csv  informacion_general.csv  servicios.csv  terminales.csv  vuelos.csv
agente12/src/agente12/: crew.py  main.py
agente12/src/agente12/config/: agents.yaml  tasks.yaml
agente_2/: README.md
chatbot/: README.md  readme.md
chatbot/API+Agent3/: pyproject.toml
chatbot/API+Agent3/knowledge/: servicios.csv
chatbot/API+Agent3/src/agent3/: .env  crew.py  main.py
chatbot/API+Agent3/src/agent3/config/: agents.yaml  tasks.yaml
chatbot/API+Agent3/src/agent3/knowledge/: dades_serveis.csv  servicios.txt
chatbot/API+Agent3/src/api/: api.py
chatbot/agent11/: README.md  pyproject.toml
chatbot/agent11/knowledge/: protocols_incidencies.csv
chatbot/agent11/src/agent11/: crew.py  main.py
chatbot/agent11/src/agent11/config/: agents.yaml  tasks.yaml
chatbot/agent4/: README.md  pyproject.toml
chatbot/agent4/db/: chroma.sqlite3
chatbot/agent4/src/agent4/: crew.py  main.py
chatbot/agent4/src/agent4/config/: tasks.yaml
chatbot/agent6/: .gitignore  pyproject.toml
chatbot/agent6/src/agent6/: .gitignore  crew.py  main.py  readme.txt
chatbot/agent6/src/agent6/config/: agents.yaml  tasks.yaml
chatbot/agent6/src/agent6/tools/: session_tool.py
chatbot/agent7/: README.md  pyproject.toml
chatbot/agent7/knowledge/: emergency_protocols.csv
chatbot/agent7/src/agent7/: crew.py  main.py
chatbot/agent7/src/agent7/config/: agents.yaml  tasks.yaml
chatbot/agentVols/: pyproject.toml
chatbot/agentVols/src/agent_vols/: crew.py  main.py
chatbot/agente_2/: pyproject.toml
chatbot/agente_2/db/: chroma.sqlite3
chatbot/agente_2/knowledge/: estacions.csv  rutes_transport.csv
chatbot/agente_2/src/agente_2/: crew.py  main.py
chatbot/agente_2/src/agente_2/config/: agents.yaml  tasks.yaml
chatbot/agente_2/src/db/: chroma.sqlite3
chatbot/assistant/: README.md  api.py  pyproject.toml
chatbot/assistant/src/assistant/: main.py
chatbot/assistant/src/assistant/crews/api/: api.py
chatbot/assistant/src/assistant/crews/api/config/: agents.yaml  tasks.yaml
chatbot/assistant/src/assistant/crews/central/: central.py
chatbot/assistant/src/assistant/crews/central/config/: agents.yaml  tasks.yaml
chatbot/assistant/src/assistant/crews/flights/: flights.py
chatbot/assistant/src/assistant/crews/flights/config/: agents.yaml  tasks.yaml
chatbot/assistant/src/assistant/crews/service/: service.py
chatbot/assistant/src/assistant/crews/service/config/: agents.yaml  tasks.yaml
chatbot/chat/: .gitignore  pyproject.toml  readme.txt
chatbot/chat/knowledge/: taula_user.csv
chatbot/chat/src/agentCentral/: crew.py  main.py
chatbot/chat/src/agentCentral/config/: agents.yaml  tasks.yaml
chatbot/chat/src/api/: api.py
chatbot/chat/src/db/: chroma.sqlite3
qr/: generate_qr_from_json.py
recomanacioServeis/: README.md  api.py  prueba.py  recommendation.py
routing/: DStarLite.py  README.md  RevisaValores.py  api.py  api_routing.py  datastructure.py  main.py  map.out  path.json  pathfinding.py  setup.py
(+4535 files in other folders)
