[project]
name = "agente12"
version = "0.1.0"
description = "agente12 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "langchain>=0.3.23",
    "ollama>=0.4.8",
]

[project.scripts]
agente12 = "agente12.main:run"
run_crew = "agente12.main:run"
train = "agente12.main:train"
replay = "agente12.main:replay"
test = "agente12.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
