[project]
name = "agent4"
version = "0.1.0"
description = "agent4 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "mysql-connector-python>=9.3.0",
    "ollama>=0.4.8",
]

[project.scripts]
agent4 = "agent4.main:run"
run_crew = "agent4.main:run"
train = "agent4.main:train"
replay = "agent4.main:replay"
test = "agent4.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
