[project]
name = "agent6"
version = "0.1.0"
description = "Agent de control de sessió amb CrewAI"
authors = [
    { name = "El teu nom", email = "teu@email.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "ollama>=0.4.7",
    "langchain",
]

[project.scripts]
run_crew = "agent6.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent6"]
