[project]
name = "agente_2"
version = "0.1.0"
description = "Agente_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "langchain>=0.3.23",
    "ollama>=0.4.8",
]

[project.scripts]
agente_2 = "agente_2.main:run"
run_crew = "agente_2.main:run"
train = "agente_2.main:train"
replay = "agente_2.main:replay"
test = "agente_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
