[project]
name = "agentCentral"
version = "0.1.0"
description = "ChatBot using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "langchain",
    "ollama>=0.4.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentCentral"]

[project.scripts]
chat = "agentCentral.main:run"
run_crew = "agentCentral.main:run"
train = "agentCentral.main:train"
replay = "agentCentral.main:replay"
test = "agentCentral.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
